--- a/src/template.html
+++ b/src/template.html
@@ -6,5 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body></body>
+
+  <body>
+    <div id="header" class="header">
+      <h2 style="margin: 5px">My Question List</h2>
+      <form id="form">
+        <input type="text" id="input" placeholder="Title..." name="question" />
+        <button class="addBtn">Add</button>
+      </form>
+    </div>
+    <div id="root"></div>
+  </body>
 </html>
+© 2021 GitHub, Inc.
