--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,12 @@
         <button class="addBtn">Add</button>
       </form>
     </div>
-    <div id="root"></div>
+    
+    <div id="root">
+<ul id="list">
+  
+</ul>
+    </div>
   </body>
 </html>
 © 2021 GitHub, Inc.
